# Comfyui-Lyrics

./: README.md  nodes.py  pyproject.toml  requirements.txt
example/: example-workflow.json  example-workflow2.json
