[project]
name = "Comfyui-Lyrics"
description = "A ComfyUI custom node for generating dynamic scrolling lyrics videos with smooth animations. Supports audio-to-text transcription using OpenAI Whisper or importing existing SRT subtitles."
version = "1.1.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["openai-whisper", "Pillow", "numpy", "torch", "torchaudio"]

[project.urls]
Repository = "https://github.com/ahkimkoo/Comfyui-Lyrics"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/ahkimkoo/Comfyui-Lyrics/wiki"
"Bug Tracker" = "https://github.com/ahkimkoo/Comfyui-Lyrics/issues"

[tool.comfy]
PublisherId = "ahkimkoo"
DisplayName = "Comfyui-Lyrics"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

